# maf_sdlc_framework

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  current_phase.md  documentation.md  main.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
examples/: existing_project.py  new_project.py
src/agents/architecture/: __init__.py  agent.py  prompts.py
src/agents/planning/: __init__.py  agent.py  prompts.py
src/agents/requirements/: __init__.py  agent.py  prompts.py
src/models/: __init__.py  artifacts.py  project.py
src/orchestrator/: __init__.py  context.py  orchestrator.py  prompts.py
src/tools/: __init__.py  file_tool.py  github_mcp.py  template_tool.py  validator_tool.py  web_search_tool.py
src/utils/: __init__.py  config.py  llm.py
tests/: test_models.py
