[project]
name = "apex-sdlc"
version = "0.2.0"
description = "APEX — AI-Powered Engineering eXperience for SDLC orchestration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "autogen-agentchat>=0.4",
    "autogen-ext[openai]>=0.4",
    "autogen-ext[mcp]>=0.4",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
